Add fs processor Also add proto interfaces

--- a/desktop/processors/CMakeLists.txt
+++ b/desktop/processors/CMakeLists.txt
@@ -1,4 +1,4 @@
 
-# add_subdirectory(filesystem)
-add_subdirectory(kyboard)
+add_subdirectory(filesystem)
+# add_subdirectory(kyboard)
 # add_subdirectory(touchpad)
