Introduce clipboard processor Set clipboard to windows OK

--- a/desktop/processors/clipboard/CMakeLists.txt
+++ b/desktop/processors/clipboard/CMakeLists.txt
@@ -16,3 +16,5 @@ target_link_libraries(${LIBRARY_NAME}
     PRIVATE
         spdlog::spdlog
 )
+
+set(CLIPBOARD_PROCESSOR_INCLUDE "${CMAKE_CURRENT_LIST_DIR}" CACHE INTERNAL "")
