Add workaround for deny clipboard collback call for self own change

--- a/desktop/server/CMakeLists.txt
+++ b/desktop/server/CMakeLists.txt
@@ -16,7 +16,10 @@ target_include_directories(${SERVER_LIBRARY_NAME}
         "${FS_PROCESSOR_INCLUDE}"
         "${NOTIFICATION_PROCESSOR_INCLUDE}"
         "${CLIPBOARD_PROCESSOR_INCLUDE}"
+        "${CMAKE_CURRENT_BINARY_DIR}"
+        "${GRPC_SERVER_INCLUDE_ADD}"
 )
+message(WARNING "${CMAKE_CURRENT_BINARY_DIR}")
 target_link_libraries(${SERVER_LIBRARY_NAME}
     PRIVATE
         spdlog::spdlog
