--- a/desktop/grpc_server/CMakeLists.txt
+++ b/desktop/grpc_server/CMakeLists.txt
@@ -65,3 +65,4 @@ target_link_libraries(${LIBRARY_NAME}
 )
 
 set (GRPC_SERVER_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/include CACHE INTERNAL "")
+set (GRPC_SERVER_INCLUDE_ADD ${CMAKE_CURRENT_BINARY_DIR} CACHE INTERNAL "")
